added responsiveness for mobile

--- a/create.html
+++ b/create.html
@@ -1,28 +1,57 @@
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Create Post</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Tailwind CSS (dev only) -->
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
 </head>
-<body class="bg-gray-100 p-6">
-  <div class="max-w-xl mx-auto">
-    <h1 class="text-3xl font-bold mb-4">📝 New Blog Post</h1>
-    <form id="postForm" class="space-y-4">
-      <input type="text" id="title" placeholder="Title" class="w-full p-2 border rounded" required>
-      <input type="text" id="author" placeholder="Author" class="w-full p-2 border rounded" required>
-      <textarea id="content" placeholder="Content" class="w-full p-2 border rounded h-40" required></textarea>
-      <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded">Save Post</button>
-    </form>
-     <a href="index.html" class="text-blue-600 block mt-8">← Back to Home</a>
 
+<body class="bg-gray-100 p-4 sm:p-6 text-base sm:text-lg">
+  <div class="max-w-xl mx-auto">
+    <h1 class="text-2xl sm:text-3xl font-bold mb-4">📝 New Blog Post</h1>
+
+    <form id="postForm" class="space-y-4">
+      <input 
+        type="text" 
+        id="title" 
+        placeholder="Title" 
+        class="w-full p-3 sm:p-4 border rounded text-sm sm:text-base" 
+        required
+      >
+      <input 
+        type="text" 
+        id="author" 
+        placeholder="Author" 
+        class="w-full p-3 sm:p-4 border rounded text-sm sm:text-base" 
+        required
+      >
+      <textarea 
+        id="content" 
+        placeholder="Content" 
+        class="w-full p-3 sm:p-4 border rounded h-40 text-sm sm:text-base resize-none" 
+        required
+      ></textarea>
+      <button 
+        type="submit" 
+        class="bg-green-600 text-white px-4 py-2 rounded text-sm sm:text-base"
+      >
+        Save Post
+      </button>
+    </form>
+
+    <a href="index.html" class="text-blue-600 block mt-8 text-sm sm:text-base">← Back to Home</a>
   </div>
 
- <!-- Toast container -->
- <div id="toast" class="fixed top-4 right-4 bg-green-600 text-white px-4 py-2 rounded shadow hidden z-50"></div>
+  <!-- Toast container -->
+  <div id="toast" class="fixed top-4 right-4 bg-green-600 text-white px-4 py-2 rounded shadow hidden z-50 text-sm sm:text-base"></div>
 
   <script src="create.js"></script>
-  </body>
-  </html>
+</body>
+</html>
