--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Mini Blog</title>
-
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
+  
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-gray-100 p-6">
-    
+<body class="bg-gray-100 p-4 sm:p-6 text-base sm:text-lg">
   <div class="max-w-2xl mx-auto">
-    <h1 class="text-3xl font-bold mb-4">📰 Mini Blog</h1>
-    <a href="create.html" class="bg-blue-500 text-white px-4 py-2 rounded mb-4 inline-block">+ New Post</a>
+    <h1 class="text-2xl sm:text-3xl font-bold mb-4">📰 Mini Blog</h1>
+    <a href="create.html" class="bg-blue-500 text-white px-4 py-2 rounded mb-4 inline-block text-sm sm:text-base">
+      + New Post
+    </a>
 
     <div id="posts" class="space-y-4"></div>
   </div>
 
-   <!-- Toast container -->
-  <div id="toast" class="fixed top-4 right-4 bg-green-600 text-white px-4 py-2 rounded shadow hidden z-50"></div>
 
-  <!-- Add this in your HTML -->
+  <div id="toast" class="fixed top-4 right-4 bg-green-600 text-white px-4 py-2 rounded shadow hidden z-50 text-sm sm:text-base"></div>
 
-<div id="confirmModal" class="fixed inset-0 flex items-center justify-center bg-black/10 hidden">
-  <div class="bg-white p-6 rounded shadow max-w-sm text-center">
-    <p class="mb-4 text-lg">Are you sure you want to delete this?</p>
-    <button id="confirmYes" class="bg-red-600 text-white px-4 py-2 rounded mr-4">Yes</button>
-    <button id="confirmNo" class="bg-gray-300 px-4 py-2 rounded">No</button>
+  
+  <div id="confirmModal" class="fixed inset-0 flex items-center justify-center bg-black/10 hidden">
+    <div class="bg-white p-6 rounded shadow max-w-sm w-full text-center text-sm sm:text-base">
+      <p class="mb-4 text-lg">Are you sure you want to delete this?</p>
+      <button id="confirmYes" class="bg-red-600 text-white px-4 py-2 rounded mr-4">Yes</button>
+      <button id="confirmNo" class="bg-gray-300 px-4 py-2 rounded">No</button>
+    </div>
   </div>
-</div>
-
 
   <script src="script.js"></script>
 </body>
