--- a/viewpost.html
+++ b/viewpost.html
@@ -1,17 +1,21 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>View Post</title>
- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
- 
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 p-6">
-  
-  <div class="max-w-2xl mx-auto" id="post"></div>
+<body class="bg-gray-100 min-h-screen p-4 flex items-center justify-center">
+
+  <div class="w-full max-w-3xl bg-white shadow-md rounded-lg p-6" id="post">
+    <!-- Post content will be injected here by viewpost.js -->
+  </div>
 
   <script src="viewpost.js"></script>
 </body>
 </html>
+
